Whitespace wrap fix
- The markdown output now supports line breaks via enter & multiple spaces, but to create a seperate p tag with a newline between it you still have to use \

--- a/styles/main.css
+++ b/styles/main.css
@@ -245,6 +245,7 @@ button {
     border: 1px solid #5b5b5b;
     background-color: #1e1e1e;
     word-wrap: break-word;
+    white-space: pre-wrap;
     font-size: 14px;
 }
 
@@ -255,7 +256,7 @@ button {
 }
 .pinboardObject-markdown p {
     margin-top: 0px;
-    margin-bottom: 10px;
+    margin-bottom: -17px;
 }
 
 .pinboardObject-markdown input[type="checkbox"] {
